src/main/java/com/example/loginpractice/error/exception/BusinessException.java
package com.example.loginpractice.exception;

import com.example.loginpractice.error.ErrorCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class BusinessException extends RuntimeException{
    private final ErrorCode errorCode;
}
